Stop header links from wrapping

--- a/templates/styles/section-specific.scss
+++ b/templates/styles/section-specific.scss
@@ -109,7 +109,7 @@
 /*--------- Header & Splash ---------*/
 
 .header-link {
-  letter-spacing: 0.15em;
+  letter-spacing: 0.1em;
 }
 
 /*
